Added .jar export